# Gen-AI

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/codec/: README.md  alac_encoder.cppm  bitstream.cppm  lpcm_writer.cppm
src/audio/io/: README.md  m4a_writer.cppm  wav_writer.cppm
src/diffusion/: README.md  ddim.cppm  noise.cppm  scheduler.cppm
src/dsp/: README.md  fast_fourier_transform.cppm  griffin_lim.cppm  mel_filterbank.cppm  short_time_fourier_transform.cppm  wiener_filter.cppm
src/gpu/: README.md  gemm_pipeline.cppm  gpu_backend.cppm  gpu_buffer.cppm  gpu_types.cppm
src/gpu/metal/shaders/: gemm_tiled.metal
src/models/: README.md  attention.cppm  convolution2d.cppm  groupnorm.cppm  stem_unet.cppm  unet.cppm
src/tensor/: README.md  autograd.cppm  optimizer.cppm  simd_ops.cpp  simd_ops.cppm  tensor.cppm
tests/: test_compiler_version.cpp  test_fast_fourier_transform.cpp  test_tensor_SIMD.cpp  tet_wiener_separation.cpp
